@@ -32,12 +32,20 @@ class PerSEOSiteMapView (SiteMapView):
         query = {'Language': 'all'}
        
         query['portal_type'] = self.perseo_included_types()
-
+        
         for item in catalog.searchResults(query):
             if item.getIncludedInSitemapxml:
-                yield {
-                    'loc': item.getURL(),
-                    'lastmod': item.modified.ISO8601(),
-                    #'changefreq': 'always', # hourly/daily/weekly/monthly/yearly/never
-                    #'prioriy': 0.5, # 0.0 to 1.0
-                }
+                if item.getPrioritySitemapxml:
+                    yield {
+                        'loc': item.getURL(),
+                        'lastmod': item.modified.ISO8601(),
+                        #'changefreq': 'always', # hourly/daily/weekly/monthly/yearly/never
+                        'priority': item.getPrioritySitemapxml,
+                    }
+                else:
+                    yield {
+                        'loc': item.getURL(),
+                        'lastmod': item.modified.ISO8601(),
+                        #'changefreq': 'always', # hourly/daily/weekly/monthly/yearly/never
+                        #'priority': 0.5, # 0.0 to 1.0
+                    }
