@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
 <object name="portal_catalog" meta_type="Plone Catalog Tool">
 	<column value="getIncludedInSitemapxml"/>
+	<column value="getPrioritySitemapxml"/>
 </object>
